--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 # { Datasource }
 #===============
-spring.datasource.url=jdbc:mysql://localhost:3306/successstudent
+spring.datasource.url=jdbc:mysql://localhost:3308/successstudent
 spring.datasource.username=root
 spring.datasource.password=12345
 # { Hikari properties }
@@ -23,7 +23,7 @@ spring.datasource.hikari.data-source-properties.maxAllowedPacket=1073741824
 
 # { Hibernate properties }
 #=========================
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
