--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 #===============
 spring.datasource.url=jdbc:mysql://localhost:3308/successstudent
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=12345
 # { Hikari properties }
 #======================
 spring.datasource.hikari.connection-timeout=20000
