pending with report

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,8 +67,8 @@ spring.main.allow-bean-definition-overriding=true
 # { Email Service }
 #==================
 spring.mail.host=smtp.gmail.com
-spring.mail.username=samarasinghesupermarket@gmail.com
-spring.mail.password=Nuwan@1234
+spring.mail.username=samarasinghhrket@gmail.com
+spring.mail.password=Nuwan
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.socketFactory.port=465
