--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
 # { Datasource }
 #===============
-spring.datasource.url=jdbc:mysql://localhost:3306/success
+spring.datasource.url=jdbc:mysql://localhost:3306/success1
 spring.datasource.username=root
 spring.datasource.password=12345678
 # { Hikari properties }
