--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8090
 # { Datasource }
 #===============
-spring.datasource.url=jdbc:mysql://localhost:3306/success1
+spring.datasource.url=jdbc:mysql://localhost:3308/success
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=12345
 # { Hikari properties }
 #======================
 spring.datasource.hikari.connection-timeout=20000
